Fixed lead vertical shift

--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,5 @@
 ﻿.lead__image {
-  margin: 0 0 8px 0;
+  margin: 0 auto 8px auto;
   padding: 0;
   width: 100%;
   position: relative;
