--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 ﻿.lead__title {
   margin: 0 auto 32px auto;
   padding: 0;
-  font-style: normal;
+  font-style: 'Inter Black';
   font-weight: 900;
   font-size: 96px;
   line-height: 1.04;
